--- a/login/assets/css/style.css
+++ b/login/assets/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+:root{
+    --primary-color : #206CF3;
+    --secondary-color : #41D1FE;
+    --third-color : #fff;
+}
+
 body {
     background: #f6f5f7;
     display: flex;
@@ -45,15 +51,16 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #206CF3;
-    background-color: #206CF3;
-    color: #FFFFFF;
+    border: 1px solid var(--primary-color);
+    background-color: var(--primary-color);
+    color: var(--third-color);
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
+    margin-top: 10px;
 }
 
 button:active {
@@ -66,11 +73,17 @@ button:focus {
 
 button.ghost {
     background-color: transparent;
-    border-color: #FFFFFF;
+    border-color: var(--third-color);
+    cursor: pointer;
+}
+
+.loginButton:hover{
+    background-color: var(--secondary-color);
+    cursor: pointer;
 }
 
 form {
-    background-color: #FFFFFF;
+    background-color: var(--third-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,7 +102,7 @@ input {
 }
 
 .container {
-    background-color: #fff;
+    background-color: var(--third-color);
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
@@ -162,13 +175,13 @@ input {
 }
 
 .overlay {
-    background: #41D1FE;
-    background: -webkit-linear-gradient(to right, #206CF3, #41D1FE);
-    background: linear-gradient(to right, #206CF3, #41D1FE);
+    background: var(--secondary-color);
+    background: -webkit-linear-gradient(to right, var(--primary-color), var(--secondary-color));
+    background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
-    color: #FFFFFF;
+    color: var(--third-color);
     position: relative;
     left: -100%;
     height: 100%;
@@ -211,30 +224,4 @@ input {
 
 .container.right-panel-active .overlay-right {
     transform: translateX(20%);
-}
-
-
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
 }
