Menambahkan CRUD Nilai

--- a/nilai/style.css
+++ b/nilai/style.css
@@ -1,4 +1,80 @@
 * {
+  margin: 0;
+  padding: 0px;
+}
+
+.mx-auto {
+  width: 80%;
+}
+
+.card {
+  margin-top: 10px;
+}
+
+.thead .table-position {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.card-header {
+  display: flex;
+}
+
+.back {
+  margin-right: 10px;
+}
+
+.search {
+  width: 200px;
+  margin-right: 2px;
+}
+
+.sort {
+  width: 30%;
+  display: flex;
+  margin: 10px;
+}
+.search-field {
+  display: flex;
+  margin: 10px;
+}
+.data-head {
+  display: flex;
+  justify-content: space-between;
+}
+.sort-kelas {
+  margin-right: 5px;
+  width: 100%;
+}
+.select-mapel {
+  margin-right: 5px;
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+}
+.upload-file {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+
+.link-unduh {
+  margin-bottom: 5px;
+}
+.import {
+  padding-left: 10px;
+}
+
+.link-unduh {
+  margin-left: 10px;
+}
+
+
+
+
+/* * {
     margin: 0;
 }
 
@@ -30,6 +106,11 @@
 }
 
 .inpNilai {
+    width: 50px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.inpField {
     width: 100px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -65,4 +146,4 @@
 .back {
     margin-right: 5px;
 }
-
+ */
